--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (t
 
 plugins:
   - jekyll-seo-tag
-
+  - jemoji
 gems:
   - jemoji
 
